# rtkit

./: .editorconfig  .gitignore  LICENSE  Makefile  Makefile.am  README  autogen.sh  bootstrap.sh  config.h.meson  configure.ac  meson.build  meson_options.txt  org.freedesktop.RealtimeKit1.conf  org.freedesktop.RealtimeKit1.policy  org.freedesktop.RealtimeKit1.service  org.freedesktop.RealtimeKit1.service.in  org.freedesktop.RealtimeKit1.xml  rtkit-daemon.c  rtkit-daemon.service.in  rtkit-test.c  rtkit.c  rtkit.h  rtkitctl.8  rtkitctl.c  xml-introspection.S
